--- a/backend/package.json
+++ b/backend/package.json
@@ -19,9 +19,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "ts-node ./node_modules/typeorm/cli",
-    "migration:run": "pnpm run typeorm -- -d ./src/config/typeorm.ts migration:run",
-    "migration:revert": "pnpm run typeorm -- -d ./src/config/typeorm.ts migration:revert",
-    "migration:create": "pnpm run typeorm -- migration:create ./src/migrations/%npm_config_name%",
+    "migration:run": "pnpm run build && pnpm exec ts-node ./node_modules/typeorm/cli -d ./src/config/typeorm.ts migration:run",
     "migration:generate": "pnpm run build && pnpm exec ts-node ./node_modules/typeorm/cli -d ./src/config/typeorm.ts migration:generate ./src/migrations/migration"
   },
   "dependencies": {
